Added Action Status: ASYNC_COMPLETE